--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Eren'in Blogu</title>
+    <title>EterNote</title>
     <meta
       name="description"
       content="Yasin Eren'in kişisel blogu - yazılar, düşünceler ve projeler."
